All the things Got completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
-<app-header></app-header>
-
-<app-information id="resume"></app-information>
-<br>
-<app-about id="about"></app-about>
-<app-technoloies></app-technoloies>
-<app-project id="projects"></app-project>
-<br>
-<app-contac-me id="contact"></app-contac-me>
+<main class="px-6 md:px-14 lg:px-24">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+</main>
