--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,27 @@
-
 <header>
-    <div class="logo"><span class="highlight">N</span>afees <span class="highlight">A</span>hmad</div>
+
+    <div class="logo" (click)="onHomeClick()">< <span class="highlight">N</span>afees <span class="highlight">A</span>hmad /></div>
+
     <nav [ngClass]="{'open' : open}">
-        <div class="logo"><span class="highlight">N</span>afees <span class="highlight">A</span>hmad</div>
+
+        <div class="logo" (click)="onHomeClick()">< <span class="highlight">N</span>afees <span class="highlight">A</span>hmad
+        /></div>
         <ul>
-            <li class="active" (click)="close()"><a class="nav-link" href="#about">About</a></li>
-            <li (click)="close()"><a href="#projects">Projects</a></li>
-            <li (click)="close()"><a href="#contact">Contact</a></li>
-            <li (click)="close()"><a href="#resume">Resume</a></li>
+            <li (click)="close()" *ngIf="!Visible"><a class="nav-link" (click)="onHomeClick()">Home</a>
+            </li>
+            <li (click)="close()" *ngIf="Visible"><a class="nav-link" href="#about">About</a></li>
+            <li (click)="close()" *ngIf="Visible"><a href="#projects">Projects</a></li>
+            <li (click)="close()" *ngIf="Visible"><a href="#contact">Contact</a></li>
+            <li (click)="close()" *ngIf="Visible"><a href="#resume">Resume</a></li>
         </ul>
+
     </nav>
-    <div class="hamburger" (click)="open = !open" blockscroll>
+
+    <!-- In the toggle function when condition gets true screen scroll will be blocked and for false unblocked -->
+    <div class="hamburger" (click)="toggleOpenNav()">
         <div></div>
         <div></div>
         <div></div>
     </div>
+
 </header>
