--- a/src/app/project/recipe-book/recipe-book.component.html
+++ b/src/app/project/recipe-book/recipe-book.component.html
@@ -1,11 +1,12 @@
-<section >
-    <h1 data-aos="fade-up" class="title">Recipe Book</h1>
+<section class="md:w-10/12 mx-auto md:my-24 my-10 bg-color  md:p-10 p-4">
+    <h1 data-aos="fade-up" class="title"><span class="highlight">H</span>ome <span class="highlight">N</span>eeds</h1>
 
 
     <p data-aos="fade-up" class="otherTexts mt-4">
-        The E Management is a web application designed for efficient employee data management. Leveraging technologies
+        The HomeNeeds is a web application design for Recipe Management and Shopping List. Leveraging technologies
         like
-        Bootstrap for front-end design and MongoDB, Express.js, and Node.js for back-end functionality, this project
+        Bootstrap and Angular for <span class="highlight">front-end</span> design and Firebase for <span class="highlight">back-end</span> functionality, this project divided into
+        two section recipe book all and shopping list that
         offers
         a user-friendly and robust solution.
     </p>
@@ -14,7 +15,7 @@
     <section class="mt-4" data-aos="fade-up">
         <p class="headings">Key Features</p>
         <p class="my-4" *ngFor="let features of keyFeatures">
-            <span class="headings">{{features.Name}} :-</span>
+            <span class="headings">{{features.Name}} :- </span>
             <span class="otherTexts">{{features.featureDescription}}</span>
         </p>
     </section>
@@ -23,14 +24,18 @@
     <section class="mt-4" data-aos="fade-up">
         <p class="headings">Challenges Faced</p>
         <p class="otherTexts mt-4">
-            One notable challenge encountered during the development process was implementing the forget password
-            feature,
-            specifically in creating a seamless multi-step process. The challenge was addressed by designing a
-            step-by-step
-            approach using an enum field. Each step, such as email validation, OTP submission, and new password setup,
-            was
-            managed by conditionally rendering views through the ngIF directive. This innovative solution allowed for a
-            structured and user-friendly experience, overcoming the initial hurdles in the process.
+            I had a couple of issues that I encountered recently. First, I needed to return the emitted data of an
+            observable in the canActivate guard in order to dynamically prevent unauthorized or unauthenticated users
+            from accessing certain routes. However, I found that in Angular, I couldn't return data inside the subscribe
+            method. After some research, I discovered that I could use exhaust map to return the data instead of using
+            subscribe, which solved the problem.
+        </p>
+
+        <p class="otherTexts mt-4">
+            Another issue I faced was displaying the logo in the login or logout form section. Despite trying various
+            solutions, I couldn't get the logo.png file to be recognized inside the auth component, regardless of where
+            I kept it. Eventually, I found a solution on Stack Overflow - I needed to keep the logo.png file in the
+            assets folder. Once I did that, the image was successfully displayed.
         </p>
     </section>
 
