--- a/src/app/wrapper/About/about.component.html
+++ b/src/app/wrapper/About/about.component.html
@@ -1,4 +1,4 @@
-<div class="md:h-screen md:w-8/12 flex items-center mx-auto mt-12 md:mt-0">
+<div class="md:w-8/12 flex items-center mx-auto pt-10 md:pb-36 pb-10">
     <section>
         <h1 class="about">About Me</h1>
         <p data-aos="fade-up">
@@ -18,7 +18,7 @@
             extended to MEAN stack development, showcasing my commitment to mastering diverse technologies.
         </p>
         <p data-aos="fade-up">
-            Guided by the expertise of my mentor, <span class="highlight">Salmankhan.dev</span>, I have progressed from
+            Guided by the expertise of my mentor, <a href="https://salmankhan.dev/" target="main"><span class="highlight">Salmankhan.dev</span></a>, I have progressed from
             ground zero to where I am
             today.
             His guidance has been instrumental in shaping my skills and mindset as a developer.
