--- a/src/app/wrapper/contac-me/contac-me.component.html
+++ b/src/app/wrapper/contac-me/contac-me.component.html
@@ -13,18 +13,33 @@
 
         <div class="mt-10 text-center" data-aos="fade-up">
             <a class="cta" href="mailto:nafees56752@gmail.com">
-                <span> Say Hello! </span>
-                <svg width="15px" height="10px" viewBox="0 0 13 10">
+                <span class="top-1 md:top-0"> Say Hello! </span>
+                <svg width="15px" height="10px" viewBox="0 0 13 10" class="top-1 md:top-0">
                     <path d="M1,5 L11,5"></path>
                     <polyline points="8 1 12 5 8 9"></polyline>
                 </svg>
             </a>
         </div>
 
+
     </section>
 
 
     <div class="footer grid place-content-center">
+
+        <div class="text-center mb-1">
+
+            <a href="https://github.com/Ahmadnafe3s" target="main" title="Git-Hub">
+                <i class='bx bxl-github mr-1'></i>
+            </a>
+
+            <a href="https://www.linkedin.com/in/%C3%A3hm%C3%A2d-%C3%B1%C3%A4f%C3%A9%C3%ABs-2611792b7?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BeZokEISARnWK5bTX%2Fmp5QQ%3D%3D"
+                target="main" title="linkedin">
+                <i class='bx bxl-linkedin'></i>
+            </a>
+
+        </div>
+
         <p>created by Nafees Ahmad</p>
     </div>
 
