--- a/src/app/wrapper/technologies/technologies.component.html
+++ b/src/app/wrapper/technologies/technologies.component.html
@@ -1,4 +1,4 @@
-<div class="h-screen md:w-8/12 my-10 md:my-20 mx-auto grid place-content-center bg-color">
+<div class=" md:w-7/12 my-10 mx-auto md:py-28 py-16 md:mt-14 mt-10 grid place-content-center bg-color">
 
     <p class="heading text-center" data-aos="fade-up">Technolohies I’ve been working with recently</p>
 
