--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,61 +1,70 @@
 header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-    background-color: transparent;
-    height: 70px;
+    background-color: rgba(255, 255, 255, 0.15);
+    height: 60px;
     width: 95%;
     margin: 10px auto 5px auto;
     padding: 0 5px;
     border-radius: 0 0 10px 10px;
     z-index: 1;
-
 }
 
 ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style: none;
 }
 
 nav ul li {
     color: rgb(0, 0, 0);
-    margin: 0 10px;
+    margin: 0 6px;
     padding: 8px 20px;
     border-radius: 15px;
-    background-color: rgb(223, 223, 223);
     font-family: var(--font);
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
     transition: 0.2s;
+    font-weight: 600;
+    background-color: rgb(235, 246, 255);
 }
 
 li a {
-    /* text-decoration: none;
-    color: rgb(255, 255, 255); */
     cursor: pointer;
-}
-
-.active {
-    color: white !important;
-    background-color: black !important;
 }
 
 nav ul li:hover {
     color: white;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
+    -webkit-box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.498);
+    box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.498);
 }
 
 .logo {
     display: inline;
     font-size: 20px;
+    font-family: "Sacramento", cursive;
     font-weight: 600;
-    font-family: "Dancing Script", cursive;
+    font-style: normal;
 }
 
 .hamburger {
     display: none;
     padding: 3px 8px;
     background-color: rgb(239, 239, 239);
+    -webkit-box-sizing: content-box;
     box-sizing: content-box;
     border-radius: 5px;
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
     transition: 0.2s;
 }
 
@@ -81,7 +90,7 @@ nav .logo {
 
     nav {
         padding-top: 10px;
-        position: absolute;
+        position: fixed;
         margin-top: 0;
         top: 0;
         left: -100%;
@@ -89,7 +98,10 @@ nav .logo {
         height: 100vh;
         width: 65%;
         z-index: 100;
+        -webkit-box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.498);
         box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.498);
+        -webkit-transition: 0.2s;
+        -o-transition: 0.2s;
         transition: 0.2s;
     }
 
@@ -104,11 +116,11 @@ nav .logo {
     }
 
     nav ul li {
-        margin: 15px 0;
+        margin: 8px 0;
     }
 
     nav .logo {
-        margin-top: 20px;
+        margin: 20px 0;
         display: block;
         text-align: center;
         font-size: 20px;
