--- a/src/app/project/E-Management/e-managemnet.component.html
+++ b/src/app/project/E-Management/e-managemnet.component.html
@@ -1,11 +1,11 @@
-<section>
+<section id="model" class="md:w-10/12 mx-auto md:my-24 my-10 bg-color  md:p-10 p-4">
 
-    <h1 data-aos="fade-up" class="title"><span class="highlight">E</span> Management</h1>
+    <h1 data-aos="fade-up" class="title"><span class='highlight'>E</span> Management</h1>
 
     <p data-aos="fade-up" class="otherTexts mt-4">
         The E Management is a web application designed for efficient employee data management. Leveraging technologies
         like
-        Bootstrap for <span class="highlight">front-end</span>, design and mongoDB Express.js, and Node.js for <span
+        Bootstrap and Angular for <span class="highlight">front-end</span>, design and mongoDB Express.js, and Node.js for <span
             class="highlight">back-end</span> functionality, this project
         offers
         a user-friendly and robust solution.
@@ -49,7 +49,7 @@
     <section class="mt-4" data-aos="fade-up">
         <p class="headings">References</p>
         <ul>
-            <li class="text-blue-700" *ngFor="let References of references"><a target="main"
+            <li id="references" class="text-blue-700" *ngFor="let References of references"><a target="main"
                     href="{{References}}">{{References}}</a></li>
         </ul>
     </section>
