--- a/src/app/wrapper/contac-me/contac-me.component.css
+++ b/src/app/wrapper/contac-me/contac-me.component.css
@@ -1,19 +1,21 @@
-.paragraph{
-    font-size: clamp(15px , 2vw , 17px);
+.paragraph {
+    font-size: clamp(15px, 2vw, 17px);
     font-family: var(--font);
     margin-top: 20px;
 }
 
-.heading{
+.heading {
     font-family: var(--font);
-    font-size: clamp(30px , 3vw , 60px);
-    font-weight: 600;
+    font-size: clamp(35px, 3vw, 80px);
+    font-weight: var(--font-weight);
 }
 
 .cta {
     position: relative;
     margin: auto;
     padding: 10px 18px;
+    -webkit-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
     border: none;
     background: none;
@@ -30,6 +32,8 @@
     background: #b1dae7;
     width: 45px;
     height: 45px;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
 }
 
@@ -45,14 +49,18 @@
 .cta svg {
     display: inline;
     position: relative;
-    top: 0;
+    /* top: 0; */
     margin-left: 10px;
     fill: none;
     stroke-linecap: round;
     stroke-linejoin: round;
     stroke: #234567;
     stroke-width: 2;
+    -webkit-transform: translateX(-5px);
+    -ms-transform: translateX(-5px);
     transform: translateX(-5px);
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
 }
 
@@ -62,22 +70,39 @@
 }
 
 .cta:hover svg {
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
     transform: translateX(0);
 }
 
 .cta:active {
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
     transform: scale(0.95);
 }
 
-.viewHeight{
-    height: 90vh;
+.viewHeight {
+    height: 85vh;
 }
 
-.footer{
+.footer {
     height: 10vh;
 }
-.footer p{
+
+.footer p {
     font-family: monospace;
     color: gray;
-    font-size: clamp(10px , 2vw , 15px);
+    font-size: clamp(10px, 2vw, 15px);
+}
+
+.footer div {
+    font-size: clamp(22px, 4vw, 28px)
+}
+
+.footer div i {
+    cursor: pointer;
+}
+
+.footer div i:hover {
+    color: rgb(70, 70, 70);
 }
