--- a/src/app/wrapper/information/information.component.html
+++ b/src/app/wrapper/information/information.component.html
@@ -1,19 +1,20 @@
-<div class=" md:h-screen md:flex justify-between items-center mt-10 md:mt-0 md:w-10/12 mx-auto p-2">
+<div class="flex flex-wrap pt-28 pb-12 md:py-20 lg:py-24 justify-between md:w-10/12 mx-auto">
     <section class="md:w-6/12">
         <div>
-            <H5 class="introduction typing-demo mb-3"><span style="color: var(--highlight);">Hi ,</span> My Name Is...</H5>
+            <H5 class="introduction typing-demo mb-4"><span style="color: var(--highlight);">Hi ,</span> My Name Is.
+            </H5>
             <div data-aos="fade-up" class=" mb-3">
                 <p class="Name">Nafees Ahmad.</p>
                 <p class="Title">I love to build things.</p>
             </div>
         </div>
 
-        <p class="description" data-aos="fade-up">
+        <p class="description my-10 md:my-3" data-aos="fade-up">
             I’m a software engineer specializing in building exceptional web-based applications.Currently! i am focused
             on mastering Data Structure And Algorithmn.
         </p>
 
-        <div class="my-5">
+        <div class="mt-15 md:mt-8">
             <button class="cta">
                 <span> Checkout Resume </span>
                 <svg width="15px" height="10px" viewBox="0 0 13 10">
@@ -25,7 +26,9 @@
 
     </section>
 
-    <section class="md:w-5/12">
-        <img src="assets\images\me1.png" class="h-auto w-full" id="character">
+    <section class="md:w-5/12 mt-20 md:mt-0 ">
+        <div class="img-container object-fill" data-aos="fade-left">
+            <img src="assets\images\me1.png" id="character" class="w-full h-auto">
+        </div>
     </section>
 </div>
