sudden screen scroll due to animation over image got fixed

--- a/src/app/wrapper/information/information.component.html
+++ b/src/app/wrapper/information/information.component.html
@@ -27,7 +27,7 @@
     </section>
 
     <section class="md:w-5/12 mt-20 md:mt-0 ">
-        <div class="img-container object-fill" data-aos="fade-left">
+        <div class="img-container object-fill" data-aos="fade-up">
             <img src="assets\images\me1.png" id="character" class="w-full h-auto">
         </div>
     </section>
