--- a/src/app/project/E-Management/e-managemnet.component.html
+++ b/src/app/project/E-Management/e-managemnet.component.html
@@ -1,8 +1,8 @@
-<section id="model" class="md:w-10/12 mx-auto md:my-24 my-10 bg-color  md:p-10 p-4">
+<section id="model" class="md:w-10/12 mx-auto md:my-24 my-10 bg-color  md:p-10 p-4" data-aos="fade-up">
 
-    <h1 data-aos="fade-up" class="title"><span class='highlight'>E</span> Management</h1>
+    <h1  class="title"><span class='highlight'>E</span> Management</h1>
 
-    <p data-aos="fade-up" class="otherTexts mt-4">
+    <p  class="otherTexts mt-4">
         The E Management is a web application designed for efficient employee data management. Leveraging technologies
         like
         Bootstrap and Angular for <span class="highlight">front-end</span>, design and mongoDB Express.js, and Node.js for <span
@@ -12,7 +12,7 @@
     </p>
 
 
-    <section class="mt-4" data-aos="fade-up">
+    <section class="mt-4" >
         <p class="headings">Key Features</p>
         <p class="my-4" *ngFor="let features of keyFeatures">
             <span class="headings">{{features.Name}} :- </span>
@@ -21,7 +21,7 @@
     </section>
 
 
-    <section class="mt-4" data-aos="fade-up">
+    <section class="mt-4" >
         <p class="headings">Challenges Faced</p>
         <p class="otherTexts mt-4">
             One notable challenge encountered during the development process was
@@ -38,7 +38,7 @@
     </section>
 
 
-    <section class="mt-4" data-aos="fade-up">
+    <section class="mt-4" >
         <p class="headings">Technology Used.</p>
         <ul class="list-disc otherTexts">
             <li class="my-4 ml-4" *ngFor="let Technologies of technologies">{{Technologies}}</li>
@@ -46,7 +46,7 @@
     </section>
 
 
-    <section class="mt-4" data-aos="fade-up">
+    <section class="mt-4" >
         <p class="headings">References</p>
         <ul>
             <li id="references" class="text-blue-700" *ngFor="let References of references"><a target="main"
