--- a/src/app/project/recipe-book/recipe-book.component.html
+++ b/src/app/project/recipe-book/recipe-book.component.html
@@ -1,8 +1,8 @@
-<section class="md:w-10/12 mx-auto md:my-24 my-10 bg-color  md:p-10 p-4">
-    <h1 data-aos="fade-up" class="title"><span class="highlight">H</span>ome <span class="highlight">N</span>eeds</h1>
+<section class="md:w-10/12 mx-auto md:my-24 my-10 bg-color  md:p-10 p-4" data-aos="fade-up">
+    <h1 class="title"><span class="highlight">H</span>ome <span class="highlight">N</span>eeds</h1>
 
 
-    <p data-aos="fade-up" class="otherTexts mt-4">
+    <p class="otherTexts mt-4">
         The HomeNeeds is a web application design for Recipe Management and Shopping List. Leveraging technologies
         like
         Bootstrap and Angular for <span class="highlight">front-end</span> design and Firebase for <span class="highlight">back-end</span> functionality, this project divided into
@@ -12,7 +12,7 @@
     </p>
 
 
-    <section class="mt-4" data-aos="fade-up">
+    <section class="mt-4">
         <p class="headings">Key Features</p>
         <p class="my-4" *ngFor="let features of keyFeatures">
             <span class="headings">{{features.Name}} :- </span>
@@ -21,7 +21,7 @@
     </section>
 
 
-    <section class="mt-4" data-aos="fade-up">
+    <section class="mt-4">
         <p class="headings">Challenges Faced</p>
         <p class="otherTexts mt-4">
             I had a couple of issues that I encountered recently. First, I needed to return the emitted data of an
@@ -40,7 +40,7 @@
     </section>
 
 
-    <section class="mt-4" data-aos="fade-up">
+    <section class="mt-4">
         <p class="headings">Technology Used.</p>
         <ul class="list-disc otherTexts">
             <li class="my-4 ml-4" *ngFor="let Technologies of technologies">{{Technologies}}</li>
@@ -48,7 +48,7 @@
     </section>
 
 
-    <section class="mt-4" data-aos="fade-up">
+    <section class="mt-4">
         <p class="headings">References</p>
         <ul>
             <li class="text-blue-700" *ngFor="let References of references"><a target="main"
