--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -24,7 +24,9 @@ ul {
     list-style: none;
 }
 
-nav ul li {
+nav ul li {}
+
+li a {
     color: rgb(0, 0, 0);
     margin: 0 6px;
     padding: 8px 20px;
@@ -35,13 +37,10 @@ nav ul li {
     transition: 0.2s;
     font-weight: 600;
     background-color: rgb(235, 246, 255);
-}
-
-li a {
     cursor: pointer;
 }
 
-nav ul li:hover {
+nav ul li a:hover {
     color: white;
     background-color: rgb(0, 0, 0);
     -webkit-box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.498);
@@ -103,20 +102,22 @@ nav .logo {
         -webkit-transition: 0.2s;
         -o-transition: 0.2s;
         transition: 0.2s;
+        overflow: hidden;
     }
 
     nav ul {
         display: block;
-        margin-left: 53px;
+        margin-top: 30px;
+    }
+
+    nav ul li a {
+        width: 100%;
     }
 
     nav ul li {
-        padding: 7px 16px;
-        border-radius: 5px 0 0 5px;
-    }
-
-    nav ul li {
-        margin: 8px 0;
+        text-align: center;
+        margin: 20px 0;
+        width: 100%;
     }
 
     nav .logo {
