--- a/src/app/wrapper/information/information.component.html
+++ b/src/app/wrapper/information/information.component.html
@@ -1,8 +1,7 @@
 <div class="flex flex-wrap pt-28 pb-12 md:py-20 lg:py-24 justify-between md:w-10/12 mx-auto">
     <section class="md:w-6/12">
         <div>
-            <H5 class="introduction typing-demo mb-4"><span style="color: var(--highlight);">Hi ,</span> My Name Is.
-            </H5>
+            <H5 class="introduction typing-demo mb-4"><span style="color: var(--highlight);">Hi ,</span> My Name Is  </H5>
             <div data-aos="fade-up" class=" mb-3">
                 <p class="Name">Nafees Ahmad.</p>
                 <p class="Title">I love to build things.</p>
