Whole UI been updated & Resume have been added

--- a/src/app/project/E-Management/e-managemnet.component.html
+++ b/src/app/project/E-Management/e-managemnet.component.html
@@ -1,27 +1,27 @@
-<section id="model" class="md:w-10/12 mx-auto md:my-24 my-10 bg-color  md:p-10 p-4" data-aos="fade-up">
+<section id="model" class="md:w-10/12 mx-auto md:my-16 my-10 bg-color  md:p-10 p-4" >
 
-    <h1  class="title"><span class='highlight'>E</span> Management</h1>
-
-    <p  class="otherTexts mt-4">
+    <h1 class="title"><span class='highlight'>E</span> Management</h1>
+    <hr style="border: 1px solid #b4df06;">
+    <p class="otherTexts mt-10">
         The E Management is a web application designed for efficient employee data management. Leveraging technologies
         like
-        Bootstrap and Angular for <span class="highlight">front-end</span>, design and mongoDB Express.js, and Node.js for <span
-            class="highlight">back-end</span> functionality, this project
+        Bootstrap and Angular for <span class="highlight">front-end</span>, design and mongoDB Express.js, and Node.js
+        for <span class="highlight">back-end</span> functionality, this project
         offers
         a user-friendly and robust solution.
     </p>
 
 
-    <section class="mt-4" >
+    <section class="mt-4">
         <p class="headings">Key Features</p>
         <p class="my-4" *ngFor="let features of keyFeatures">
-            <span class="headings">{{features.Name}} :- </span>
+            <span class="inline_headings">{{features.Name}} :- </span>
             <span class="otherTexts">{{features.featureDescription}}</span>
         </p>
     </section>
 
 
-    <section class="mt-4" >
+    <section class="mt-4">
         <p class="headings">Challenges Faced</p>
         <p class="otherTexts mt-4">
             One notable challenge encountered during the development process was
@@ -38,15 +38,16 @@
     </section>
 
 
-    <section class="mt-4" >
+    <section class="mt-4">
         <p class="headings">Technology Used.</p>
         <ul class="list-disc otherTexts">
             <li class="my-4 ml-4" *ngFor="let Technologies of technologies">{{Technologies}}</li>
         </ul>
     </section>
 
+    <hr style="border: 1px solid #b4df06;">
 
-    <section class="mt-4" >
+    <section class="mt-4">
         <p class="headings">References</p>
         <ul>
             <li id="references" class="text-blue-700" *ngFor="let References of references"><a target="main"
