--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="px-6 md:px-14 lg:px-24">
-    <app-header></app-header>
+<app-header></app-header>
+<main class="px-3">
     <router-outlet></router-outlet>
 </main>
