--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -8,13 +8,14 @@ header {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: rgba(0, 22, 32, 0.15);
     height: 60px;
-    width: 95%;
-    margin: 10px auto 5px auto;
-    padding: 0 5px;
-    border-radius: 0 0 10px 10px;
+    padding: 0 15px;
     z-index: 1;
+    position: sticky;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(5px);
 }
 
 ul {
@@ -24,7 +25,6 @@ ul {
     list-style: none;
 }
 
-nav ul li {}
 
 li a {
     color: rgb(0, 0, 0);
@@ -36,15 +36,12 @@ li a {
     -o-transition: 0.2s;
     transition: 0.2s;
     font-weight: 600;
-    background-color: rgb(235, 246, 255);
+    background-color: var(--highlight);
     cursor: pointer;
 }
 
 nav ul li a:hover {
-    color: white;
-    background-color: rgb(0, 0, 0);
-    -webkit-box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.498);
-    box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.498);
+    box-shadow: 0 0 20px 1px #b4bd3762;
 }
 
 .logo {
@@ -53,12 +50,13 @@ nav ul li a:hover {
     font-family: "Sacramento", cursive;
     font-weight: 600;
     font-style: normal;
+    cursor: pointer;
 }
 
 .hamburger {
     display: none;
     padding: 3px 8px;
-    background-color: rgb(239, 239, 239);
+    background-color: var(--highlight);
     -webkit-box-sizing: content-box;
     box-sizing: content-box;
     border-radius: 5px;
@@ -68,7 +66,7 @@ nav ul li a:hover {
 }
 
 .hamburger:hover {
-    background-color: rgb(207, 207, 207);
+    background-color: #97bd00;
 }
 
 .hamburger div {
@@ -93,7 +91,7 @@ nav .logo {
         margin-top: 0;
         top: 0;
         left: -100%;
-        background-color: #fefefe;
+        background-color: #0f1200;
         height: 100vh;
         width: 65%;
         z-index: 100;
