--- a/src/app/project/E-Management/e-managemnet.component.css
+++ b/src/app/project/E-Management/e-managemnet.component.css
@@ -1,17 +1,34 @@
 .title {
     font-family: var(--font);
     font-weight: 600;
-    font-size: clamp(19px, 2vw, 22px);
+    font-size: clamp(40px, 5vw, 60px);
     text-align: center;
-    background: #e7f2ff;
     padding: 8px 0;
 }
 
-.headings {
+
+.headings{
+    font-family: var(--font);
+    font-weight: 600;
+    font-size: clamp(25px, 2vw, 19px);
+}
+
+
+.headings::after{
+    content: "";
+    display: inline-block;
+    width: 22%;
+    height: 1px;
+    margin-left: 5px;
+    background-color: var(--highlight);
+}
+
+ .inline_headings{
     font-family: var(--font);
     font-weight: 600;
     font-size: clamp(17px, 2vw, 19px);
 }
+
 
 .otherTexts {
     font-family: var(--font);
@@ -27,3 +44,20 @@
     font-size: clamp(10px, 2vw, 18px);
     border-radius: 15px;
 }
+
+
+
+@media screen and (min-width : 370px) {
+    .headings::after{
+     width: 35%;
+     margin-left: 8px;
+    }
+ }
+ 
+ 
+ @media screen and (min-width : 769px) {
+     .headings::after{
+         width: 50%;
+         margin-left: 10px;
+        }
+ }
