--- a/src/app/project/project.component.css
+++ b/src/app/project/project.component.css
@@ -4,23 +4,44 @@
     font-size: var(--heading);
 }
 
-nav ul li{
+
+.AcedemicProject::after {
+    content: "";
+    display: inline-block;
+    width: 15%;
+    height: 1px;
+    margin-left: 10px;
+    background-color: #b4df06;
+}
+
+
+.AcedemicProject::before {
+    content: "";
+    display: inline-block;
+    width: 15%;
+    height: 1px;
+    margin-right: 10px;
+    background-color: #b4df06;
+}
+
+
+nav ul li {
     padding: 10px 20px;
     font-family: var(--font);
     font-weight: 600;
     font-size: clamp(13px, 2vw, 17px);
 }
 
-nav ul li:nth-child(2){
+nav ul li:nth-child(2) {
     margin-left: 10px;
 }
 
 
-nav ul{
+nav ul {
     background-color: rgb(235, 235, 235);
 }
 
-.onclickActive{
+.onclickActive {
     background-color: lightgreen;
 }
 
@@ -30,23 +51,14 @@ nav ul{
 .card {
     width: 190px;
     height: 254px;
-    border-radius: 30px;
-    background: #e0e0e0;
-    box-shadow: 15px 15px 30px #bebebe,
-        -15px -15px 30px #ffffff;
-}
-
-
-.card {
-    width: 190px;
-    height: 254px;
     border-radius: 20px;
-    background: #f5f5f5;
+    background: black;
     position: relative;
     padding: 1.8rem;
-    border: 2px solid #c3c6ce;
+    border: 2px solid var(--highlight);
     transition: 0.5s ease-out;
     overflow: visible;
+    box-shadow: 0 0 20px 1px #b4bd3724;
 }
 
 .card-details {
@@ -62,8 +74,8 @@ nav ul{
     width: 60%;
     border-radius: 1rem;
     border: none;
-    background-color: #008bf8;
-    color: #fff;
+    background-color: #21f3a4;
+    color: black;
     font-size: 1rem;
     padding: .5rem 1rem;
     position: absolute;
@@ -81,11 +93,12 @@ nav ul{
 .text-title {
     font-size: clamp(16px, 2vw, 17px);
     font-weight: bold;
+    color: white;
 }
 
 /*Hover*/
 .card:hover {
-    border-color: #008bf8;
+    border-color: #21f3a4;
     box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
 }
 
@@ -95,6 +108,29 @@ nav ul{
 }
 
 
-.highlight{
+.highlight {
     color: var(--highlight);
+}
+
+
+
+@media screen and (min-width : 370px) {
+    .AcedemicProject::after {
+        width: 20%;
+    }
+
+    .AcedemicProject::before {
+        width: 20%;
+    }
+}
+
+
+@media screen and (min-width : 769) {
+    .AcedemicProject::after {
+        width: 45%;
+    }
+
+    .AcedemicProject::before {
+        width: 45%;
+    }
 }
