--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,9 +1,11 @@
 <section class=" mx-auto md:w-8/12 md:pt-52 md:mt-10 pt-36">
 
   <h1 class="AcedemicProject text-center">Academic Projects</h1>
+
   <div class="flex flex-wrap justify-center mt-8">
 
-    <div class="card md:mx-10 mx-5  my-6" data-aos="fade-up">
+
+    <div class="card md:mx-10 mx-5  my-6 list_reveal">
       <div class="card-details">
         <p class="text-title"><span class="highlight">E</span> Management</p>
         <p class="text-body">A web application design for managing employee data.</p>
@@ -11,13 +13,25 @@
       <button class="card-button" routerLink="e-management" (click)="onNavigate()">More info</button>
     </div>
 
-    <div class="card md:mx-10 mx-5 my-6" data-aos="fade-up">
+
+    <div class="card md:mx-10 mx-5 my-6 list_reveal">
       <div class="card-details">
-        <p class="text-title"><span class="highlight">H</span>ome Needs</p>
-        <p class="text-body">A web application design for managing Recipes .</p>
+        <p class="text-title"><span class="highlight">Angular</span> Home Needs</p>
+        <p class="text-body">A web application design for managing Recipes  & shopping List.</p>
       </div>
-      <button class="card-button" routerLink="home-needs" (click)="onNavigate()">More info</button>
+      <button class="card-button" routerLink="homeneeds" (click)="onNavigate()">More info</button>
     </div>
 
+
+    <div class="card md:mx-10 mx-5 my-6 list_reveal">
+      <div class="card-details">
+        <p class="text-title"><span class="highlight">nextJS</span> Home Needs</p>
+        <p class="text-body">A web application design for Posting and Managing Recipes & Shopping List.</p>
+      </div>
+      <button class="card-button" routerLink="nextjs-homeneeds" (click)="onNavigate()">More info</button>
+    </div>
+
+
   </div>
+
 </section>
