--- a/src/app/wrapper/About/about.component.css
+++ b/src/app/wrapper/About/about.component.css
@@ -6,6 +6,16 @@
 }
 
 
+.about::after {
+    content: "";
+    display: inline-block;
+    width: 50%;
+    height: 1px;
+    margin-left: 10px;
+    background-color: #b4df06;
+}
+
+
 p {
     font-family: var(--font);
     font-size: clamp(15px, 2vw, 19px);
