--- a/src/app/wrapper/contac-me/contac-me.component.css
+++ b/src/app/wrapper/contac-me/contac-me.component.css
@@ -6,80 +6,15 @@
 
 .heading {
     font-family: var(--font);
-    font-size: clamp(35px, 3vw, 80px);
+    font-size: clamp(45px, 4vw, 100px);
     font-weight: var(--font-weight);
+    background: radial-gradient(circle, rgba(184, 222, 0, 1) 29%, rgba(0, 255, 239, 1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
 }
 
-.cta {
-    position: relative;
-    margin: auto;
-    padding: 10px 18px;
-    -webkit-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-    border: none;
-    background: none;
-    cursor: pointer;
-}
-
-.cta:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    border-radius: 50px;
-    background: #b1dae7;
-    width: 45px;
-    height: 45px;
-    -webkit-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.cta span {
-    position: relative;
-    font-family: "Ubuntu", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    letter-spacing: 0.05em;
-    color: #234567;
-}
-
-.cta svg {
-    display: inline;
-    position: relative;
-    /* top: 0; */
-    margin-left: 10px;
-    fill: none;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke: #234567;
-    stroke-width: 2;
-    -webkit-transform: translateX(-5px);
-    -ms-transform: translateX(-5px);
-    transform: translateX(-5px);
-    -webkit-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.cta:hover:before {
-    width: 100%;
-    background: #b1dae7;
-}
-
-.cta:hover svg {
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    transform: translateX(0);
-}
-
-.cta:active {
-    -webkit-transform: scale(0.95);
-    -ms-transform: scale(0.95);
-    transform: scale(0.95);
-}
 
 .viewHeight {
     height: 85vh;
