--- a/src/app/wrapper/contac-me/contac-me.component.html
+++ b/src/app/wrapper/contac-me/contac-me.component.html
@@ -3,15 +3,15 @@
 
     <section class="viewHeight grid place-content-center ">
 
-        <div class="md:w-6/12 text-center mx-auto ">
-            <h1 class="heading" data-aos="fade-up">Get in touch.</h1>
-            <p class="paragraph" data-aos="fade-up">I'm actively seeking new opportunities, and my inbox is always open.
+        <div class="md:w-6/12 text-center mx-auto">
+            <h1 class="heading list_reveal">Get in touch.</h1>
+            <p class="paragraph list_reveal">I'm actively seeking new opportunities, and my inbox is always open.
                 Whether you have a
                 question or just want
                 to drop a 'hi', I'll do my best to respond!</p>
         </div>
 
-        <div class="mt-10 text-center" data-aos="fade-up">
+        <div class="mt-10 text-center list_reveal">
             <a class="cta" href="mailto:nafees56752@gmail.com">
                 <span class="top-1 md:top-0"> Say Hello! </span>
                 <svg width="15px" height="10px" viewBox="0 0 13 10" class="top-1 md:top-0">
