--- a/src/app/wrapper/information/information.component.css
+++ b/src/app/wrapper/information/information.component.css
@@ -1,9 +1,17 @@
 .Name,
 .Title {
-    font-size: clamp(35px, 8vw, 80px);
+    font-size: clamp(45px, 8vw, 80px);
     font-weight: var(--font-weight);
     font-family: var(--main-heading-font);
     font-style: normal;
+}
+
+.Name {
+    background: radial-gradient(circle, rgba(184, 222, 0, 1) 29%, rgba(0, 255, 239, 1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
 }
 
 .Title {
@@ -24,91 +32,28 @@
 
 
 .img-container {
-    background-color: rgb(241, 250, 254);
-    border-radius: 100px;
+    background: rgb(184, 222, 0);
+    background: -moz-radial-gradient(circle, rgba(184, 222, 0, 1) 29%, rgba(0, 255, 239, 1) 100%);
+    background: -webkit-radial-gradient(circle, rgba(184, 222, 0, 1) 29%, rgba(0, 255, 239, 1) 100%);
+    background: radial-gradient(circle, rgba(184, 222, 0, 1) 29%, rgba(0, 255, 239, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b8de00", endColorstr="#00ffef", GradientType=1);
+    border-radius: 100px 100px 0 80px;
+    height: 400px;
     /* overflow: hidden; */
 }
-
-.cta {
-    position: relative;
-    margin: auto;
-    padding: 10px 18px;
-    -webkit-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-    border: none;
-    background: none;
-    cursor: pointer;
-}
-
-.cta:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    border-radius: 50px;
-    background: #b1dae7;
-    width: 45px;
-    height: 45px;
-    -webkit-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.cta span {
-    position: relative;
-    font-family: "Ubuntu", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    letter-spacing: 0.05em;
-    color: #234567;
-}
-
-.cta svg {
-    display: inline;
-    position: relative;
-    top: 0;
-    margin-left: 10px;
-    fill: none;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke: #234567;
-    stroke-width: 2;
-    -webkit-transform: translateX(-5px);
-    -ms-transform: translateX(-5px);
-    transform: translateX(-5px);
-    -webkit-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.cta:hover:before {
-    width: 100%;
-    background: #b1dae7;
-}
-
-.cta:hover svg {
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    transform: translateX(0);
-}
-
-.cta:active {
-    -webkit-transform: scale(0.95);
-    -ms-transform: scale(0.95);
-    transform: scale(0.95);
-}
-
 
 
 
 .introduction {
-    font-family: monospace;
     font-size: clamp(15px, 2vw, 20px);
-    max-width: -webkit-fit-content;
-    max-width: -moz-fit-content;
-    max-width:max-content;
+}
+
+.introduction::after {
+    content: "";
+    display: inline-block;
+    width: 50%;
+    height: 1px;
+    background-color: #b4df06;
 }
 
 .description {
@@ -117,36 +62,8 @@
 }
 
 
-.typing-demo {
-    width: 23ch;
-    -webkit-animation: typing 2s steps(22), blink .5s step-end infinite alternate;
-    animation: typing 2s steps(22), blink .5s step-end infinite alternate;
-    white-space: nowrap;
-    overflow: hidden;
-    border-right: 2px solid;
-    font-family: monospace;
-}
-
-@-webkit-keyframes typing {
-    from {
-        width: 0
-    }
-}
-
-@keyframes typing {
-    from {
-        width: 0
-    }
-}
-
-@-webkit-keyframes blink {
-    50% {
-        border-color: transparent
-    }
-}
-
-@keyframes blink {
-    50% {
-        border-color: transparent
+@media screen and (min-width : 769px) {
+    .img-container {
+        height: 600px;
     }
 }
