--- a/src/app/wrapper/information/information.component.html
+++ b/src/app/wrapper/information/information.component.html
@@ -1,33 +1,35 @@
-<div class="flex flex-wrap pt-28 pb-12 md:py-20 lg:py-24 justify-between md:w-10/12 mx-auto">
-    <section class="md:w-6/12">
+<div class="min-h-screen items-center md:mt-0 mt-14 flex flex-wrap md:gap-10 gap-16 justify-center md:w-10/12 mx-auto">
+    <section class="md:w-6/12 order-2 md:order-1">
         <div>
-            <H5 class="introduction typing-demo mb-4"><span style="color: var(--highlight);">Hi ,</span> My Name Is  </H5>
-            <div data-aos="fade-up" class=" mb-3">
-                <p class="Name">Nafees Ahmad.</p>
-                <p class="Title">I love to build things.</p>
+            <H5 class="introduction list_reveal mb-4"><span style="color: var(--highlight);">Hi ,</span> My Name Is. </H5>
+            <div class=" mb-3">
+                <p class="Name list_reveal">Nafees Ahmad.</p>
+                <p class="Title list_reveal">I love to build things.</p>
             </div>
         </div>
 
-        <p class="description my-10 md:my-3" data-aos="fade-up">
+        <p class="description my-10 md:my-3 list_reveal">
             I’m a software engineer specializing in building exceptional web-based applications.Currently! i am focused
             on mastering Data Structure And Algorithmn.
         </p>
 
-        <div class="mt-15 md:mt-8">
-            <button class="cta">
+        <div class="mt-15 md:mt-8 list_reveal">
+            <a href="assets/pdf/Nafees_CV.pdf" download class="cta" >
                 <span> Checkout Resume </span>
                 <svg width="15px" height="10px" viewBox="0 0 13 10">
                     <path d="M1,5 L11,5"></path>
                     <polyline points="8 1 12 5 8 9"></polyline>
                 </svg>
-            </button>
+            </a>
         </div>
 
     </section>
 
-    <section class="md:w-5/12 mt-20 md:mt-0 ">
-        <div class="img-container object-fill" data-aos="fade-up">
-            <img src="assets\images\me1.png" id="character" class="w-full h-auto">
+    <section class="md:w-5/12 order-1 md:order-2 single_reveal">
+        <div class="img-container">
+            <img ngSrc="assets/images/me1.png" id="character" height="1200" width="978" priority
+                class="w-full h-full object-cover">
         </div>
     </section>
+
 </div>
