--- a/src/app/wrapper/technologies/technologies.component.css
+++ b/src/app/wrapper/technologies/technologies.component.css
@@ -4,8 +4,10 @@
     font-family: var(--font);
 }
 
+
+
 .icons {
-    font-size: clamp(35px, 3vw, 100px);
+    font-size: clamp(50px, 5vw, 60px);
     transition: 0.2s;
     cursor: pointer;
 }
@@ -15,6 +17,15 @@
 }
 
 .bg-color {
-    background-color: rgb(241, 250, 254);
-    border-radius: 15px;
+    background: black;
+    color: #b8de00;
+    border: 2px solid rgb(184, 222, 0);
+    border-radius: 20px 0 10px 0;
+    box-shadow: 0 0 16px 1px #b4bd3724;
+}
+
+
+.responsive-svg {
+    width: clamp(50px, 5vw, 60px);
+    height: clamp(50px, 5vw, 60px);
 }
